name:                reveal-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/reveal-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RevealHs
                     , RevealHs.Internal
                     , RevealHs.QQ
                     , RevealHs.TH
  build-depends:       base >= 4.7 && < 5
                     , hashable >= 1.2
                     , unordered-containers
                     , interpolate >= 0.1
                     , template-haskell >= 2.11
  default-language:    Haskell2010

executable reveal-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reveal-hs
  default-language:    Haskell2010

test-suite reveal-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reveal-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/reveal-hs
