name:                reveal-hs
version:             0.0.0.2
synopsis:            Write your reveal.js presentations in Haskell!
description:         Please see README.md
homepage:            https://github.com/KenetJervet/reveal-hs#readme
license:             BSD3
license-file:        LICENSE
author:              薄墨ゆきお
maintainer:          anohigisavay@gmail.com
copyright:           2016 薄墨ゆきお
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RevealHs
                     , RevealHs.Internal
                     , RevealHs.Options
                     , RevealHs.QQ
                     , RevealHs.TH
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11
                     , blaze-html
                     , hashable >= 1.2
                     , unordered-containers
                     , interpolate >= 0.1
                     , markdown
                     , template-haskell >= 2.11
                     , text
  default-language:    Haskell2010

executable reveal-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       RevealHs.Sample.Cover
                     , RevealHs.Sample.Section1
                     , RevealHs.Sample.Section2
                     , RevealHs.Sample.Env
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reveal-hs
                     , time >= 1.6
  default-language:    Haskell2010
  default-extensions:  QuasiQuotes
                     , TemplateHaskell

test-suite reveal-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reveal-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KenetJervet/reveal-hs
